--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="education-experience">
-                    <img src="./assets/images/iac_logo.png" class="img-responsive" alt="..." width="200px" height="200px">
+                    <img src="./assets/images/iac_logo.png" class="img-responsive" alt="..." width="200px"
+                      height="200px">
                     <small class="date">Present-2018</small>
                     <h3 class="h5 date-title">College</h3>
                     <p>iACADEMY</p>
@@ -134,7 +135,8 @@
                 </div>
                 <div class="col-md-4">
                   <div class="education-experience">
-                    <img src="./assets/images/siena_logo.jpg" class="img-responsive" alt="..." width="200px" height="200px">
+                    <img src="./assets/images/siena_logo.jpg" class="img-responsive" alt="..." width="200px"
+                      height="200px">
                     <small class="date">2018-2016</small>
                     <h3 class="h5 date-title">Senior High School</h3>
                     <p>Siena College Taytay</p>
@@ -142,7 +144,8 @@
                 </div>
                 <div class="col-md-4">
                   <div class="education-experience">
-                    <img src="./assets/images/agapeland_logo.jpg" class="img-responsive" alt="..." width="200px" height="200px">
+                    <img src="./assets/images/agapeland_logo.jpg" class="img-responsive" alt="..." width="200px"
+                      height="200px">
                     <small class="date">2016-2012</small>
                     <h3 class="h5 date-title">Junior High School</h3>
                     <p>Agapeland Christian Academy</p>
@@ -163,15 +166,16 @@
                   <div class="item active">
                     <img src="./assets/images/cybercert01.png" class="img-responsive" alt="...">
                     <div class="carousel-caption">
-                      <h3 class="h5">Cybersecurity Awareness</h3>
+                      <h3 class="h5">Identifying and Safeguarding Personally Identifiable Information (PII)</h3>
                       <p>2020</p>
                     </div>
                   </div>
 
+
                   <div class="item">
                     <img src="./assets/images/cybercert02.png" class="img-responsive" alt="...">
                     <div class="carousel-caption">
-                      <h3 class="h5">Marking Classified Information</h3>
+                      <h3 class="h5">Cybersecurity Awareness</h3>
                       <p>2020</p>
                     </div>
                   </div>
@@ -179,7 +183,7 @@
                   <div class="item">
                     <img src="./assets/images/cybercert03.png" class="img-responsive" alt="...">
                     <div class="carousel-caption">
-                      <h3 class="h5">Identifying and Safeguarding Personally Identifiable Information (PII)</h3>
+                      <h3 class="h5">Marking Classified Information</h3>
                       <p>2020</p>
                     </div>
                   </div>
@@ -187,23 +191,31 @@
                   <div class="item">
                     <img src="./assets/images/webcert01.png" class="img-responsive" alt="...">
                     <div class="carousel-caption">
-                      <h3 class="h5">Introduction to The Internet of Things</h3>
-                      <p>2021</p>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <img src="./assets/images/webcert02.png" class="img-responsive" alt="...">
-                    <div class="carousel-caption">
                       <h3 class="h5">Introduction to Web Security Threats</h3>
                       <p>2020</p>
                     </div>
                   </div>
 
                   <div class="item">
-                    <img src="./assets/images/webcert03.png" class="img-responsive" alt="...">
+                    <img src="./assets/images/webcert02.png" class="img-responsive" alt="...">
                     <div class="carousel-caption">
                       <h3 class="h5">Website Building 101</h3>
+                      <p>2021</p>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <img src="./assets/images/webcert03.png" class="img-responsive" alt="...">
+                    <div class="carousel-caption">
+                      <h3 class="h5">Introduction to The Internet of Things</h3>
+                      <p>2021</p>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <img src="./assets/images/webcert04.png" class="img-responsive" alt="...">
+                    <div class="carousel-caption">
+                      <h3 class="h5">Fundamentals of Python Programming</h3>
                       <p>2021</p>
                     </div>
                   </div>
@@ -245,8 +257,8 @@
                   <li data-target="#carousel-example-generic" data-slide-to="6"></li>
                   <li data-target="#carousel-example-generic" data-slide-to="7"></li>
                   <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="9"></li>
                 </ol>
-
               </div>
             </div>
           </div>
