--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="white-text-container section-container">
       <div class="text-center">
         <h1>Hello! I'm April</h1>
-        <p>An Aspiring Software Engineer</p>
+        <p>An Aspiring Software Quality Engineer</p>
       </div>
     </header>
 
@@ -53,12 +53,11 @@
                 </div>
                 <div class="col-md-8" style="padding-top: 10%;">
 
-                  <p>Hi! I'm April, a 3rd year college student taking Bachelor of Science Major in Computer Science with
+                  <p>Hi! I'm April, a 4th year college student taking Bachelor of Science Major in Computer Science with
                     Specialization in Software Engineer in iACADEMY. </p>
-                  <p>I am currently investing my skill set in front-end by learning Javascript, React.js and Node.js. If
-                    you're an avid fan of
-                    One Piece and currently addicted to Genshin Impact, contact me and let's be friends :D</p>
 
+                  <p>I am an aspiring Software Quality Engineer. If you're an avid fan of
+                    One Piece and currently addicted to Genshin Impact, contact me and let's be friends :D</p>
                 </div>
               </div>
             </div>
@@ -297,6 +296,7 @@
               <i class="far fa-envelope"></i>
             </a>
           </p>
+          <p>©All right reserved. Design <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
         </div>
       </div>
 
@@ -312,20 +312,7 @@
       scrollRevelation('.card');
     });
   </script>
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
--->
+ 
   <script type="text/javascript" src="./main.bc58148c.js"></script>
 </body>
 
