--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="white-text-container section-container">
       <div class="text-center">
         <h1>Hello! I'm April</h1>
-        <p>An Aspiring Software Quality Engineer</p>
+        <p>An Aspiring Quality Assurance Engineer</p>
       </div>
     </header>
 
@@ -56,7 +56,7 @@
                   <p>Hi! I'm April, a 4th year college student taking Bachelor of Science Major in Computer Science with
                     Specialization in Software Engineer in iACADEMY. </p>
 
-                  <p>I am an aspiring Software Quality Engineer. If you're an avid fan of
+                  <p>I am an aspiring Quality Assurance Engineer. If you're an avid fan of
                     One Piece and currently addicted to Genshin Impact, contact me and let's be friends :D</p>
                 </div>
               </div>
